color and logo updated

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 
 /********** Color Scheme **********/
 :root {
-  --primary: #06a3da;
+  --primary: #fffb21;
   --secondary: #34ad54;
   --light: #eef9ff;
   --dark: #091e3e;
